@startuml
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml

interface ApiState {
+ void execute(ApiGateway apiGateway, String url);
}

class "HotelService"{
- ApiGateway apiGateway
+ ResponseEntity<String> getHotels()
+ ResponseEntity<String> getHotelDetails\n(String itineraryId, String sessionId, String origin, String destination, String date)
}

class "VluchtService"{
- ApiGateway apiGateway
+ ResponseEntity<String> getFlights()
+ ResponseEntity<String> getFlightDetails\n(String itineraryId, String sessionId, String origin, String destination, String date)
}
class WorkingState {
    + void execute(ApiGateway apiGateway, String url);
}
class RetryState {
    + void execute(ApiGateway apiGateway, String url);
}

class FallbackState {
    + void execute(ApiGateway apiGateway, String url);
}
class ApiGateway{
    - ApiState state
    - String rapidApiKey
    - AsyncHttpClient client
    + ResponseEntity<String> getFlights()
    + ResponseEntity<String> getFlightDetails\n(String itineraryId, String sessionId, String origin, String destination, String date)
    + ResponseEntity<String> fetchResponse(String url)
    + ResponseEntity<String> getCache()
    + void getState()
    + void setState(ApiState state)
}
"VluchtService" --> "ApiGateway"
"HotelService" --> "ApiGateway"
"ApiGateway" --> "ApiState"
"WorkingState" --|> "ApiState"
"RetryState" --|> "ApiState"
"FallbackState" --|> "ApiState"
@enduml